= New Features =

== 1.22 release (in-progress) == #release-1.22

=== Library ===

==== Major changes ====

==== New classes ====
 * LatentVariableModel (openturns.experimental)
 * StudentCopula (openturns.experimental)

==== API changes ====
 * Removed deprecated (Non)LinearLeastSquaresCalibration::getCandidate method
 * Removed deprecated (Non)GaussianLinearCalibration::getCandidate method
 * Removed deprecated DomainIntersection|Union|DisjunctiveUnion(Domain, Domain) ctors
 * Removed deprecated EllipticalDistribution::getInverseCorrelation method
 * Removed deprecated Basis::getDimension method
 * Removed deprecated HSICStat ctors relying on weight matrix
 * Deprecated Pagmo.setGenerationNumber for setMaximumIterationNumber
 * Deprecated NLopt.SetSeed for setSeed
 * Deprecated IterativeThresholdExceedance(dimension, threshold) ctor

=== Documentation ===

=== Python module ===

=== Miscellaneous ===
 * Added IterativeThresholdExceedance::getRatio
 * Added FunctionalChaosResult::drawSelectionHistory to plot LARS coefs paths


== 1.21 release (2023-06-20) == #release-1.21

=== Library ===

==== Major changes ====
 * New GEV estimation services: MLE, profiled likelihood, r-maxima, time-varying, return level

==== New classes ====
 * SmolyakExperiment (openturns.experimental)
 * Physical|StandardSpaceCrossEntropyImportanceSampling, CrossEntropyResult (openturns.experimental)
 * LeastSquaresExpansion, IntegrationExpansion (openturns.experimental)
 * UniformOverMesh (openturns.experimental)
 * GeneralizedExtremeValueValidation (openturns.experimental)
 * Coles (openturns.usecases.coles)
 * Linthurst (openturns.usescases.linthurst)

==== API changes ====
 * Deprecated LinearLeastSquaresCalibration::getCandidate, use getStartingPoint
 * Deprecated NonLinearLeastSquaresCalibration::getCandidate, use getStartingPoint
 * Deprecated GaussianLinearCalibration::getCandidate, use getParameterMean
 * Deprecated NonGaussianLinearCalibration::getCandidate, use getParameterMean