@@ -573,6 +573,7 @@ ot_pyinstallcheck_test (SmoothedUniform_std)
 ot_pyinstallcheck_test (SquaredNormal_std)
 ot_pyinstallcheck_test (Student_std)
 ot_pyinstallcheck_test (StudentCopula_std IGNOREOUT)
+ot_pyinstallcheck_test (StudentCopulaFactory_std IGNOREOUT)
 ot_pyinstallcheck_test (StudentFactory_std)
 ot_pyinstallcheck_test (Trapezoidal_std)
 if (CMAKE_SIZEOF_VOID_P EQUAL 8)
